# filament

./: CMakeLists.txt
daz3d/: CMakeLists.txt
filament/backend/: CMakeLists.txt
filament/backend/include/private/backend/: Driver.h
filament/backend/src/: DriverBase.h
filament/backend/src/metal/: MetalEnums.h
filament/backend/src/opengl/: OpenGLDriver.cpp  OpenGLDriver.h
filament/include/filament/: Texture.h
filament/src/: Engine.cpp  Texture.cpp
filament/src/details/: Engine.h  Texture.cpp  Texture.h
libs/bluegl/: CMakeLists.txt
libs/filamat/src/shaders/: ShaderGenerator.cpp
libs/gltfio/materials/: ubershader.mat.in
samples/materials/: sandboxCloth.mat  texturedLit.mat
shaders/src/: common_lighting.fs  common_material.fs  light_indirect.fs  material_inputs.fs  shading_lit.fs  shading_model_cloth.fs  shading_model_standard.fs  shading_model_subsurface.fs
